--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
+html{
+  height: 100%;
+  background: linear-gradient(135deg, #26519B, #00BDFE) no-repeat;
+}
+
+
+body{
+  background: linear-gradient(135deg, #26519B, #00BDFE) no-repeat;
+  height: 100%;
+}
+
